# compass-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  plugins.xml  releaser_history.json  rpm.store  tracks.yaml
.github/: ci.ros2.rosinstall  labeler.yml
.github/workflows/: ci-ros2.yaml  labeler.yaml  reuse.yaml
LICENSES/: LicenseRef-WMM-Public-Domain.txt
compass_conversions/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
compass_conversions/cmake/: message_filters_has_node_interfaces.cpp  message_filters_subscriber_base_is_template.cpp
compass_conversions/include/compass_conversions/: compass_transformer.hpp  message_filter.hpp  tf2_compass_msgs.hpp
compass_conversions/nodelets/: compass_transformer.cpp
compass_conversions/src/: compass_converter.cpp  message_filter.cpp
compass_conversions/test/: test_compass_converter.cpp  test_compass_transformer_nodelet.cpp  test_message_filter.cpp
compass_interfaces/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
compass_interfaces/msg/: Azimuth.msg
compass_interfaces/src/: string_utils.cpp
debian/: changelog  control  copyright  gbp.conf  rules
include/compass_conversions/: compass_converter.hpp  topic_names.hpp
include/compass_interfaces/: string_utils.hpp
include/magnetometer_compass/: visualize_azimuth_nodelet.hpp
launch/: bias_remover.launch  compass_transformer.launch
magnetic_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
magnetic_model/include/magnetic_model/: magnetic_model.hpp  magnetic_model_manager.hpp
magnetic_model/share/data/magnetic/: LICENSE  README.md  igrf14.wmm  wmm2025.wmm  wmm2025.wmm.cof  wmm2025.wmm.cof.license
magnetic_model/src/: magnetic_model_manager.cpp
magnetometer_compass/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugins.xml
magnetometer_compass/cmake/: tf2_sensor_msgs_has_imu.cpp
magnetometer_compass/include/magnetometer_compass/: magnetometer_compass.hpp  magnetometer_compass_nodelet.hpp  tf2_sensor_msgs.hpp
magnetometer_compass/launch/: compass.launch
magnetometer_compass/nodelets/: magnetometer_compass_nodelet.cpp  visualize_azimuth_nodelet.cpp
magnetometer_compass/src/: magnetometer_compass.cpp
magnetometer_pipeline/: CMakeLists.txt
magnetometer_pipeline/include/magnetometer_pipeline/: bias_remover.hpp  magnetometer_bias_remover_nodelet.hpp  message_filter.hpp
magnetometer_pipeline/src/: message_filter.cpp
magnetometer_pipeline/test/: test_message_filter.cpp
nodelets/: compass_transformer.cpp  magnetometer_bias_remover_nodelet.cpp
nodes/: magnetometer_bias_observer.py
rpm/: ros-jazzy-compass-conversions.spec  ros-jazzy-compass-interfaces.spec  ros-jazzy-magnetic-model.spec  ros-jazzy-magnetometer-compass.spec  ros-kilted-compass-conversions.spec  ros-kilted-magnetic-model.spec  ros-kilted-magnetometer-compass.spec  ros-kilted-magnetometer-pipeline.spec  ros-rolling-compass-conversions.spec  ros-rolling-compass-interfaces.spec  ros-rolling-magnetic-model.spec  ros-rolling-magnetometer-pipeline.spec  template.spec
share/data/magnetic/: igrf14.wmm.cof
src/: bias_remover.cpp  compass_converter.cpp  magnetic_model.cpp  magnetometer_compass.cpp  string_utils.cpp  tf2_compass_msgs.cpp  topic_names.cpp
test/: test_bias_remover.cpp  test_bias_remover_nodelet.cpp  test_magnetic_model.cpp  test_magnetometer_compass.cpp  test_magnetometer_compass_nodelet.cpp  test_string_utils.cpp  test_tf2_compass_msgs.cpp  test_topic_names.cpp  test_visualize_azimuth_nodelet.cpp
