<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- SPDX-License-Identifier: BSD-3-Clause -->
<!-- SPDX-FileCopyrightText: Czech Technical University in Prague -->
<package format="3">
  <name>magnetometer_compass</name>
  <version>3.0.2</version>
  <description>Compass based on a 3-axis magnetometer, attitude readings and possibly also GNSS.</description>

  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license file="LICENSE">BSD</license>

  <url type="repository">https://github.com/ctu-vras/compass</url>
  <url type="bugtracker">https://github.com/ctu-vras/compass/issues</url>
  <url type="website">https://index.ros.org/p/magnetometer_compass</url>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_gen_version_h</buildtool_depend>

  <depend>cras_cpp_common</depend>
  <depend>compass_interfaces</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>angles</build_depend>
  <build_depend>compass_conversions</build_depend>
  <build_depend>magnetometer_pipeline</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <exec_depend>angles</exec_depend>
  <exec_depend>compass_conversions</exec_depend>
  <exec_depend>magnetometer_pipeline</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>cras_lint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
